fix: Fix css to align ico and text in width

--- a/client/src/components/ui/CustomCard/customCard.css
+++ b/client/src/components/ui/CustomCard/customCard.css
@@ -27,16 +27,17 @@
 }
 
 .cards .card p.tip {
+  width: 200px;
   font-size: 1.3em;
   font-weight: 700;
-  margin: 0; /* Supprimer les marges */
+  margin: 0;
 }
 
 .cards .card p.second-text {
   font-size: 1.1em;
   font-weight: 700;
   color: #9fc4d0;
-  margin: 0; /* Supprimer les marges */
+  margin: 0;
 }
 
 .cards .card:hover {
